objects/Selenium_Group_Org_Credential__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Org_Credential__c</fullName>
        <label>Org Credential</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Selenium Group Org Credentials</relationshipLabel>
        <relationshipName>Selenium_Group_Org_Credentials</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Selenium_Test_Group__c</fullName>
        <label>Selenium Test Group</label>
        <referenceTo>Selenium_Test_Group__c</referenceTo>
        <relationshipLabel>Selenium Group Org Credentials</relationshipLabel>
        <relationshipName>Selenium_Group_Org_Credentials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Selenium Group Org Credential</label>
    <nameField>
        <displayFormat>TGOC-{00000}</displayFormat>
        <label>Selenium Group Org Credential Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selenium Group Org Credentials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Environment_Match</fullName>
        <active>true</active>
        <description>If the Selenium Test Group has an Environment, the Environment of the Org Credential must match the Group&apos;s Environment.</description>
        <errorConditionFormula>IF ( AND( NOT( ISBLANK(  Selenium_Test_Group__r.Environment__c ) ) , Selenium_Test_Group__r.Environment__c !=  Org_Credential__r.Environment__c), true, false  )</errorConditionFormula>
        <errorMessage>The Selenium Test Group Environment must equal the Org Credential Environment.</errorMessage>
    </validationRules>
</CustomObject>